<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".view.ui.SearchAsGuestActivity">

    <ImageView
        android:id="@+id/rectangleImage"
        android:layout_width="316dp"
        android:layout_height="416dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/rectangle"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:elevation="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_vegan_logo_white" />

    <TextView
        android:id="@+id/type_the_name_of_the_product_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:elevation="11dp"
        android:text="@string/type_the_name_of_the_product"
        android:textAllCaps="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/rectangleImage"
        app:layout_constraintStart_toEndOf="@+id/rectangleImage"
        app:layout_constraintTop_toTopOf="@+id/rectangleImage" />

    <TextView
        android:id="@+id/type_the_product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:elevation="11dp"
        android:text="@string/type_the_product_description"
        android:textAllCaps="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/rectangleImage"
        app:layout_constraintStart_toEndOf="@+id/rectangleImage"
        app:layout_constraintTop_toBottomOf="@+id/name_of_the_product" />

    <com.unstoppable.submitbuttonview.SubmitButton
        android:id="@+id/add_vegan_alternatives"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="60dp"
        android:elevation="10dp"
        android:textColor="#ffffff"
        app:buttonColor="#ffffff"
        app:buttonText="@string/add_vegan_alternative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangleImage" />

    <EditText
        android:id="@+id/name_of_the_product"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:text="Name"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/type_the_product_description"
        app:layout_constraintEnd_toEndOf="@+id/rectangleImage"
        app:layout_constraintStart_toStartOf="@+id/rectangleImage"
        app:layout_constraintTop_toBottomOf="@+id/type_the_name_of_the_product_tv" />

    <EditText
        android:id="@+id/description_tv"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/rectangleImage"
        app:layout_constraintStart_toStartOf="@+id/rectangleImage"
        app:layout_constraintTop_toBottomOf="@+id/type_the_product_description" />

</androidx.constraintlayout.widget.ConstraintLayout>