<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".view.ui.SearchAsGuestActivity">

    <ImageView
        android:id="@+id/rectangleImage"
        android:layout_width="343dp"
        android:layout_height="315dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/rectangle"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.351" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="123dp"
        android:layout_height="88dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_vegan_logo_white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:elevation="11dp"
        android:text="@string/choose_a_product"
        android:textAllCaps="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/rectangleImage"
        app:layout_constraintStart_toEndOf="@+id/rectangleImage"
        app:layout_constraintTop_toTopOf="@+id/rectangleImage" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/products"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:elevation="11dp"
        app:layout_constraintEnd_toStartOf="@+id/rectangleImage"
        app:layout_constraintStart_toEndOf="@+id/rectangleImage"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:elevation="11dp"
        android:text="@string/select_purpose"
        android:textAllCaps="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/rectangleImage"
        app:layout_constraintStart_toEndOf="@+id/rectangleImage"
        app:layout_constraintTop_toBottomOf="@+id/products" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/purpose"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:elevation="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleImage"
        app:layout_constraintEnd_toStartOf="@+id/rectangleImage"
        app:layout_constraintStart_toEndOf="@+id/rectangleImage"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.unstoppable.submitbuttonview.SubmitButton
        android:id="@+id/show_vegan_alternatives"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:elevation="10dp"
        android:textColor="#ffffff"
        app:buttonColor="#ffffff"
        app:buttonText="@string/show_vegan_alternatives"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangleImage" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="products,textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>