...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.unstoppable.submitbuttonview.SubmitButton
        android:id="@+id/login"
        android:layout_width="228dp"
        android:layout_height="47dp"
        android:layout_marginTop="96dp"
        android:textColor="#ffffff"
        app:buttonColor="#ffffff"
        app:buttonText="LOG IN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.unstoppable.submitbuttonview.SubmitButton
        android:id="@+id/continue_as_guest"
        android:layout_width="228dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        app:buttonColor="#ffffff"
        app:buttonText="CONTINUE AS GUEST"
...
